# parallelism_theory_Rebrikov_24942

./: .gitignore  README.md
1/: CMakeLists.txt  config.h.in  task1  task1.cpp
